# preprocessor

./: .travis.yml  CMakeLists.txt  appveyor.yml  build.jam  index.html
.github/workflows/: ci.yml
doc/: Appendix A   An Introduction to Preprocessor Metaprogramming.html  acknowledgements.html  bibliography.html  contents.html  data.html  examples.html  headers.html  index.html  miscellanea.html  ref.html  styles.css  syntax.html  terms.html  title.html  top.html  topics.html
doc/data/: arrays.html  lists.html  sequences.html  tuples.html
doc/headers/: arithmetic.html  array.html  assert_msg.html  cat.html  comma.html  comma_if.html  comparison.html  control.html  debug.html  dec.html  empty.html  enum.html  enum_params.html  enum_shifted.html  enum_shifted_params.html  epwad.html  epwd.html  expand.html  expr_if.html  facilities.html  for.html  identity.html  if.html  inc.html  iterate.html  (+24 more)
test/: CMakeLists.txt  Jamfile.v2  arithmetic.c  arithmetic.cxx  array.c  array.cxx  checkempty.cxx  clang_cuda.cu  cmake_self_test.cpp  comparison.c  comparison.cxx  config_info.cpp  control.c  control.cxx  cpp_standard.cpp  debug.c  debug.cxx  facilities.c  facilities.cxx  isempty.c  isempty.cpp  isempty.cxx  isempty_failure.c  isempty_failure.cxx  isempty_failure2.cpp  isempty_failure2.cxx  isempty_variadic_standard_failure.c  isempty_variadic_standard_failure.cxx  isempty_variadic_standard_failure2.c  isempty_variadic_standard_failure2.cxx  iteration.cpp  iteration.h  list.c  list.cxx  logical.c  logical.cxx  punctuation.c  punctuation.cxx  quick.cpp  repetition.cpp  (+17 more)
(+702 files in other folders)
